# FillwordsSolver

./: .gitignore  AbstractNode.h  ArrayNode.cpp  ArrayNode.h  CMakeLists.txt  Edge.cpp  Edge.h  HashNode.h  ListNode.cpp  ListNode.h  Node.cpp  Node.h  README.md  Solver.cpp  Trie.cpp  Trie.h  Trie.hpp  main.cpp  shortened_dict.txt  table2x15.txt  table2x5.txt  table2x50.txt  test_table.txt
Dictionaries/: dict.txt
Tables/: table2.txt  table3.txt
src/: Edge.h  Point.hpp  Solver.cpp  Solver.hpp  Trie.h  Trie.hpp  Utilities.cpp  Utilities.h  WordWithCoors.h
src/Nodes/: ArrayNode.cpp  ArrayNode.h  HashNode.cpp  HashNode.h  ListNode.cpp  ListNode.h  STL_ArrayNode.cpp  STL_ArrayNode.h  TestListNode.cpp  TestListNode.h
